--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -2,10 +2,10 @@ spring.application.name=gulimall-gateway
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 # 配置命名空间
 spring.cloud.nacos.config.namespace=d01f4c22-2828-4b7b-9516-3375dc227aaf
-spring.cloud.nacos.discovery.group=dev
-server.port=10000
+# spring.cloud.nacos.discovery.group=dev
+server.port=11000
 
 ## 配置文件
-spring.cloud.nacos.config.group=dev
+# spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.shared-configs[0]=application.yml
 spring.cloud.nacos.config.refresh-enabled=true
