--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -6,9 +6,14 @@ server:
       max: 1000
       min-spare: 30
     connection-timeout: 5000ms
-  port: 8080
+  port: 7777
   servlet:
     context-path: /renren-fast
+
+
+
+
+
 
 spring:
   # 环境 dev|test|prod
@@ -40,8 +45,16 @@ spring:
     throw-exception-if-no-handler-found: true
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-#  resources:
-#    add-mappings: false
+  resources:
+    add-mappings: false
+
+
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 
 
 #mybatis
