增加第三方服务oss

--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -7,5 +7,6 @@ server.port=11000
 
 ## 配置文件
 # spring.cloud.nacos.config.group=dev
-spring.cloud.nacos.config.shared-configs[0]=application.yml
-spring.cloud.nacos.config.refresh-enabled=true
+spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
+spring.cloud.nacos.config.shared-configs[0].refresh=true
+
