--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -14,7 +14,11 @@
     <dependencies>
 
         <!--spring cloud alibaba-->
-
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.15.1</version>
+        </dependency>
 
 
         <!--服务发现-->
@@ -29,7 +33,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
-
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>-->
+<!--            <version>2.2.0.RELEASE</version>-->
+<!--        </dependency>-->
 
 
         <dependency>
