--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -2,3 +2,8 @@ spring.application.name=gulimall-product
 
 spring.cloud.nacos.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=5829f1a2-d0e2-47f7-9732-fab3fbc28e96
+
+## 配置文件
+# spring.cloud.nacos.config.group=dev
+spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
+spring.cloud.nacos.config.shared-configs[0].refresh=true
