--- a/gulimall-third-party/src/main/resources/bootstrap.properties
+++ b/gulimall-third-party/src/main/resources/bootstrap.properties
@@ -3,5 +3,7 @@ spring.application.name=gulimall-third-party
 spring.cloud.nacos.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=172615a7-9f57-4600-bfaf-f8fe02212e7c
 
-spring.cloud.nacos.config.ext-config[0].data-id=application.yml
-spring.cloud.nacos.config.ext-config[0].refresh=true
+## 配置文件
+# spring.cloud.nacos.config.group=dev
+spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
+spring.cloud.nacos.config.shared-configs[0].refresh=true
