--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -13,6 +13,13 @@
 
     <dependencies>
 
+        <!--校验注解-->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
         <!--spring cloud alibaba-->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
