--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -9,3 +9,6 @@ spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
 
 
+spring.cache.type=redis
+# \u7F13\u5B58\u7A7A\u503C,\u9632\u6B62\u7F13\u5B58\u7A7F\u900F
+spring.cache.redis.cache-null-values=true
