--- a/gulimall-search/src/main/resources/bootstrap.properties
+++ b/gulimall-search/src/main/resources/bootstrap.properties
@@ -3,4 +3,8 @@ spring.application.name=gulimall-search
 spring.cloud.nacos.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=661e4d17-a17d-4121-9b4b-51c80e9b670d
 
+spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
+spring.cloud.nacos.config.shared-configs[0].refresh=true
+
 server.port=9977
+spring.thymeleaf.cache=false
