--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>gulimall-common</module>
         <module>gulimall-gateway</module>
         <module>gulimall-search</module>
+        <module>gulimall-third-party</module>
     </modules>
 
     <properties>
