--- a/renren-generator/pom.xml
+++ b/renren-generator/pom.xml
@@ -135,9 +135,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>2.6.6</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
 			</plugin>
-
-
 		</plugins>
 	</build>
 
