--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>gulimall-search</module>
         <module>gulimall-third-party</module>
         <module>gulimall-auth-server</module>
+        <module>gulimall-cart</module>
     </modules>
 
     <properties>
