--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -11,6 +11,10 @@
     <name>gulimall-common</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <spring-cloud.version>2021.0.7</spring-cloud.version>
+        <spring-boot.version>2.6.6</spring-boot.version>
+    </properties>
     <dependencies>
 
         <!--校验注解-->
@@ -27,6 +31,13 @@
             <version>3.15.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.6.6</version>
+        </dependency>
+
+
 
         <!--服务发现-->
         <dependency>
@@ -38,6 +49,23 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-sleuth</artifactId>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
 
 <!--        <dependency>-->
