--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>2021.0.7</spring-cloud.version>
+<!--        <spring-cloud-alibaba.version>2021.0.7</spring-cloud-alibaba.versio>-->
     </properties>
     <dependencies>
 
@@ -24,6 +25,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+            <version>2021.0.4.0</version>
+        </dependency>
         <!--网关依赖-->
 
         <dependency>
