--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -1,12 +1,17 @@
 spring.application.name=gulimall-gateway
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-# 配置命名空间
+# \u914D\u7F6E\u547D\u540D\u7A7A\u95F4
 spring.cloud.nacos.config.namespace=d01f4c22-2828-4b7b-9516-3375dc227aaf
 # spring.cloud.nacos.discovery.group=dev
 server.port=11000
 
-## 配置文件
+## \u914D\u7F6E\u6587\u4EF6
 # spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
+
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
 
