--- a/gulimall-member/src/main/resources/bootstrap.properties
+++ b/gulimall-member/src/main/resources/bootstrap.properties
@@ -7,3 +7,8 @@ spring.cloud.nacos.config.namespace=56570105-76f9-4bca-8c04-792917a933cd
 # spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
+
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
