--- a/gulimall-order/src/main/resources/bootstrap.properties
+++ b/gulimall-order/src/main/resources/bootstrap.properties
@@ -13,3 +13,8 @@ spring.cache.type=redis
 # \u7F13\u5B58\u7A7A\u503C,\u9632\u6B62\u7F13\u5B58\u7A7F\u900F
 spring.cache.redis.cache-null-values=true
 
+
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
