--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -12,3 +12,9 @@ spring.cloud.nacos.config.shared-configs[0].refresh=true
 spring.cache.type=redis
 # \u7F13\u5B58\u7A7A\u503C,\u9632\u6B62\u7F13\u5B58\u7A7F\u900F
 spring.cache.redis.cache-null-values=true
+
+
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
