--- a/gulimall-search/src/main/resources/bootstrap.properties
+++ b/gulimall-search/src/main/resources/bootstrap.properties
@@ -6,3 +6,8 @@ spring.cloud.nacos.config.namespace=661e4d17-a17d-4121-9b4b-51c80e9b670d
 spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
 
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
+
