--- a/gulimall-third-party/src/main/resources/bootstrap.properties
+++ b/gulimall-third-party/src/main/resources/bootstrap.properties
@@ -3,7 +3,12 @@ spring.application.name=gulimall-third-party
 spring.cloud.nacos.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=172615a7-9f57-4600-bfaf-f8fe02212e7c
 
-## 配置文件
+## \u914D\u7F6E\u6587\u4EF6
 # spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
+
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
