--- a/gulimall-ware/src/main/resources/bootstrap.properties
+++ b/gulimall-ware/src/main/resources/bootstrap.properties
@@ -7,3 +7,8 @@ spring.cloud.nacos.config.namespace=b205cb4d-228a-4048-8104-012164ee485b
 # spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.shared-configs[0].data-id=application.yml
 spring.cloud.nacos.config.shared-configs[0].refresh=true
+
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.sleuth.sampler.probability=1
+spring.zipkin.sender.type=web
