--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,9 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>2021.0.7</spring-cloud.version>
     </properties>
-
 
     
 </project>
